# rust-register

./: Cargo.toml  okteto.yaml
db/: Cargo.toml
model/src/: details.rs  subject.rs
src/: main.rs
src/_tests/: db.rs  register.rs
src/db/: db_comments.rs  mod.rs  register_adapter.rs
src/env/: mod.rs
src/handler/: handler.rs  mod.rs
src/model/: details.rs  error.rs  mod.rs  register_details.rs  register_subject.rs  subject.rs
src/util/: mod.rs
src/web/: mod.rs  register.rs  web_comments.rs
