[package]
name = "registar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
couch_rs = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = "0.11.12"
thiserror = "1.0"
anyhow="1.0"
async-trait="0.1.58"